# controller/products.py
@@ -1,5 +1,7 @@
 from bl_product_amaz.us_btgs import US_btgs
 from bl_product_amaz.amz_attrs import AMZ_attrs
+from bl_product_amaz.amz_sub_attrs import AMZ_sub_attrs
+from bl_product_amaz.amz_title_dic import AMZ_title_dic
 
 from swagger_server.models.get_products_browse_node_attributes_response import GetProductsBrowseNodeAttributesResponse
 from swagger_server.models.get_products_browse_node_attributes_response_data import GetProductsBrowseNodeAttributesResponseData
@@ -24,32 +26,38 @@ class Products(object):
 
       us_btgs_api = US_btgs()
       attrs_api = AMZ_attrs()
+      sub_attrs_api = AMZ_sub_attrs()
 
       us_btgs_res = us_btgs_api.get_attrs_by_node_id(nodeId)
       if us_btgs_res:
-        for attr in us_btgs_res:
-          for key, value in attr.items():
-            res_data = GetProductsBrowseNodeAttributesResponseData()
+        for anAttr in us_btgs_res:
+          for key in anAttr.keys():
+            attrs_res = attrs_api.get_attr_by_attr_id(key)
+            if attrs_res:
+              res_data = GetProductsBrowseNodeAttributesResponseData()
 
-            attr_instance = Attr()
-            attr_instance.attr_code = key
-            attr_instance.value = value
-            res_data.attr = attr_instance
+              attr_instance = Attr()
+              attr_instance.attr_id = attrs_res.get('attr_id')
+              attr_instance.attr_us_name = attrs_res.get('attr_us_name')
+              attr_instance.attr_kr_name = attrs_res.get('attr_kr_name')
+              sub_attr_ids = attrs_res.get('sub_attr_ids')
 
-            if key:
-              attrs_res = attrs_api.get_sub_attr_by_sub_attr_id(key)
-              sub_attr_list = []
-              for sub_attr in attrs_res:
-                sub_attr_instance = SubAttr()
-                sub_attr_instance.sub_attr_code = sub_attr.get('sub_attr_code')
-                sub_attr_instance.value = sub_attr.get('value')
-                sub_attr_instance.text = sub_attr.get('text')
+              if sub_attr_ids:
+                sub_attr_list = []
+                for sub_attr_id in sub_attr_ids:
+                  sub_attrs_res = sub_attrs_api.get_sub_attr_by_sub_attr_id(sub_attr_id)
+                  if sub_attrs_res:
+                    sub_attr_instance = SubAttr()
+                    sub_attr_instance.sub_attr_id = sub_attrs_res.get('sub_attr_id')
+                    sub_attr_instance.sub_attr_us_name = sub_attrs_res.get('sub_attr_us_name')
+                    sub_attr_instance.sub_attr_kr_name = sub_attrs_res.get('sub_attr_kr_name')
 
-                sub_attr_list.append(sub_attr_instance)
+                    sub_attr_list.append(sub_attr_instance)
 
+              res_data.attr = attr_instance
               res_data.sub_attrs = sub_attr_list
 
-            attr_data_list.append(res_data)
+          attr_data_list.append(res_data)
 
         response_status = 200
 
