# swagger/api.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   description: This is an API documentation for the Bluehack Amazon Service.
-  version: 0.0.2
+  version: 0.0.7
   title: bl-amazon-api
   contact:
     email: master@bluehack.net
@@ -311,17 +311,42 @@ paths:
         404:
           description: Titles not found
 
-  /tool/dictionary/words:
+  /tool/dictionary/browseNodes/{nodeId}/all:
     get:
       tags:
       - tool
-      summary: Get dictionary words for filtering within specified browse nodes
-      description: Return Dictionary Words for filtering ingredients
-      operationId: "getDictionaryWords"
+      summary: Get all dictionary hierarchy within a specified browse node
+      description: Return all dictionary hierarchy
+      operationId: "getDictionaryBrowseNodesAll"
       produces:
       - "application/json"
       parameters:
-      - name: nodeIds
+      - name: nodeId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/GetDictionaryBrowseNodesAllResponse"
+        400:
+          description: Invalid input
+        404:
+          description: Dictionary not found
+
+  /tool/dictionary/subAttrs/words:
+    get:
+      tags:
+      - tool
+      summary: Get dictionary words with subAttrId list
+      description: Return Dictionary Words
+      operationId: "getDictionarySubAttrsWords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: subAttrIds
         in: "query"
         description: ""
         required: true
@@ -332,36 +357,7 @@ paths:
         200:
           description: successful operation
           schema:
-            $ref: "#/definitions/GetDictionaryWordsResponse"
-        400:
-          description: Invalid input
-        404:
-          description: Dictionary not found
-
-    post:
-      tags:
-      - tool
-      summary: Add filtering word to dictionary
-      description: Add to dictionary
-      operationId: "postDictionaryWords"
-      produces:
-      - "application/json"
-      parameters:
-      - name: subAttrId
-        in: "query"
-        description: ""
-        required: true
-        type: string
-      - name: word
-        in: "query"
-        description: ""
-        required: true
-        type: string
-      responses:
-        200:
-          description: successful operation
-          schema:
-            $ref: "#/definitions/PostDictionaryWordsResponse"
+            $ref: "#/definitions/GetDictionarySubAttrsWordsResponse"
         400:
           description: Invalid input
         404:
@@ -399,7 +395,36 @@ paths:
         404:
           description: Dictionary not found
 
-  /tool/dictionary/products/{nodeId}/attrs:
+  /tool/dictionary/products/{nodeId}/attrs/{attrId}:
+    get:
+      tags:
+      - tool
+      summary: Get an attribute within a specified browse node's
+      description: Return an attribute
+      operationId: "getDictionaryProductsAttrs"
+      produces:
+      - "application/json"
+      parameters:
+      - name: nodeId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: attrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/GetDictionaryProductsAttrsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: Attr not found
+
     post:
       tags:
       - tool
@@ -415,7 +440,7 @@ paths:
         required: true
         type: string
       - name: attrId
-        in: "query"
+        in: "path"
         description: ""
         required: true
         type: string
@@ -437,9 +462,44 @@ paths:
         400:
           description: Invalid input
         404:
-          description: Products not found
+          description: Attr not found
 
-  /tool/dictionary/products/{nodeId}/attrs/{attrId}/subAttrs:
+  /tool/dictionary/products/{nodeId}/attrs/{attrId}/subAttrs/{subAttrId}:
+    get:
+      tags:
+      - tool
+      summary: Get a sub attribute within a specified browse node's attribute
+      description: Get a sub attribute
+      operationId: "getDictionaryProductsAttrsSubAttrs"
+      produces:
+      - "application/json"
+      parameters:
+      - name: nodeId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: attrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: subAttrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/GetDictionaryProductsAttrsSubAttrsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: SubAttr not found
+
     post:
       tags:
       - tool
@@ -460,7 +520,7 @@ paths:
         required: true
         type: string
       - name: subAttrId
-        in: "query"
+        in: "path"
         description: ""
         required: true
         type: string
@@ -483,7 +543,171 @@ paths:
         400:
           description: Invalid input
         404:
-          description: Products not found
+          description: SubAttr not found
+
+  /tool/dictionary/products/{nodeId}/attrs/{attrId}/subAttrs/{subAttrId}/words:
+    get:
+      tags:
+      - tool
+      summary: Check the dic_word contains within a specified browse node's attribute's sub attribute
+      description: Checket a dic_word contains
+      operationId: "getDictionaryProductsAttrsSubAttrsWords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: nodeId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: attrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: subAttrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: word
+        in: "query"
+        description: ""
+        required: true
+        type: string
+
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/GetDictionaryProductsAttrsSubAttrsWordsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: SubAttr not found
+
+    post:
+      tags:
+      - tool
+      summary: Add a dic_word within a specified browse node's attribute's sub attribute
+      description: Add a dic_word
+      operationId: "postDictionaryProductsAttrsSubAttrsWords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: nodeId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: attrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: subAttrId
+        in: "path"
+        description: ""
+        required: true
+        type: string
+      - name: word
+        in: "query"
+        description: ""
+        required: true
+        type: string
+
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/PostDictionaryProductsAttrsSubAttrsWordsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: SubAttr not found
+
+  /tool/dictionary/subAttrs/words/count/reset:
+    post:
+      tags:
+      - tool
+      summary: Reset title_dic counts
+      description: Reset title_dic counts
+      operationId: "postDictionarySubAttrsWordsCountReset"
+      produces:
+      - "application/json"
+      parameters:
+      - name: subAttrIds
+        in: "query"
+        description: ""
+        required: true
+        type: array
+        items:
+          type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/PostDictionarySubAttrsWordsCountResetResponse"
+        400:
+          description: Invalid input
+        404:
+          description: SubAttrs not found
+
+  /tool/dictionary/words:
+    get:
+      tags:
+      - tool
+      summary: "[DEPRECATED] Get dictionary words for filtering within specified browse nodes"
+      description: "[DEPRECATED] Return Dictionary Words for filtering ingredients"
+      operationId: "getDictionaryWords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: nodeIds
+        in: "query"
+        description: ""
+        required: true
+        type: array
+        items:
+          type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/GetDictionaryWordsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: Dictionary not found
+
+    post:
+      tags:
+      - tool
+      summary: "[DEPRECATED] Add filtering word to dictionary"
+      description: "[DEPRECATED] Add to dictionary"
+      operationId: "postDictionaryWords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: subAttrId
+        in: "query"
+        description: ""
+        required: true
+        type: string
+      - name: word
+        in: "query"
+        description: ""
+        required: true
+        type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/PostDictionaryWordsResponse"
+        400:
+          description: Invalid input
+        404:
+          description: Dictionary not found
 
 securityDefinitions:
   api_key:
@@ -535,6 +759,15 @@ definitions:
       feed_processing_status:
         type: string
       feed_type:
+        type: string
+  TitleDic:
+    type: object
+    properties:
+      sub_attr_id:
+        type: string
+      dic_word:
+        type: string
+      count:
         type: string
 
   GetProductsStatusResponse:
@@ -677,6 +910,38 @@ definitions:
             type: array
             items:
               type: string
+  GetDictionaryBrowseNodesAllResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        type: array
+        items:
+          type: object
+          properties:
+            attr:
+              $ref: '#/definitions/Attr'
+            sub_attrs:
+              type: array
+              items:
+                type: object
+                properties:
+                  sub_attr:
+                    $ref: '#/definitions/SubAttr'
+                  title_dics:
+                    type: array
+                    items:
+                      $ref: '#/definitions/TitleDic'
+  GetDictionarySubAttrsWordsResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/TitleDic'
   GetDictionaryWordsFilteredResponse:
     type: object
     properties:
@@ -699,15 +964,56 @@ definitions:
     properties:
       message:
         type: string
+      data:
+        type: string
+  GetDictionaryProductsAttrsResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        $ref: '#/definitions/Attr'
   PostDictionaryProductsAttrsResponse:
     type: object
     properties:
       message:
         type: string
+      data:
+        type: string
+  GetDictionaryProductsAttrsSubAttrsResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        $ref: '#/definitions/SubAttr'
   PostDictionaryProductsAttrsSubAttrsResponse:
     type: object
     properties:
       message:
+        type: string
+      data:
+        type: string
+  GetDictionaryProductsAttrsSubAttrsWordsResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        type: boolean
+  PostDictionaryProductsAttrsSubAttrsWordsResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
+        type: string
+  PostDictionarySubAttrsWordsCountResetResponse:
+    type: object
+    properties:
+      message:
+        type: string
+      data:
         type: string
 
 externalDocs:
