# swagger_server/models/get_dictionary_sub_attrs_words_response.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.title_dic import TitleDic  # noqa: F401,E501
+from swagger_server import util
+
+
+class GetDictionarySubAttrsWordsResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message: str=None, data: List[TitleDic]=None):  # noqa: E501
+        """GetDictionarySubAttrsWordsResponse - a model defined in Swagger
+
+        :param message: The message of this GetDictionarySubAttrsWordsResponse.  # noqa: E501
+        :type message: str
+        :param data: The data of this GetDictionarySubAttrsWordsResponse.  # noqa: E501
+        :type data: List[TitleDic]
+        """
+        self.swagger_types = {
+            'message': str,
+            'data': List[TitleDic]
+        }
+
+        self.attribute_map = {
+            'message': 'message',
+            'data': 'data'
+        }
+
+        self._message = message
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetDictionarySubAttrsWordsResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetDictionarySubAttrsWordsResponse of this GetDictionarySubAttrsWordsResponse.  # noqa: E501
+        :rtype: GetDictionarySubAttrsWordsResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this GetDictionarySubAttrsWordsResponse.
+
+
+        :return: The message of this GetDictionarySubAttrsWordsResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this GetDictionarySubAttrsWordsResponse.
+
+
+        :param message: The message of this GetDictionarySubAttrsWordsResponse.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def data(self) -> List[TitleDic]:
+        """Gets the data of this GetDictionarySubAttrsWordsResponse.
+
+
+        :return: The data of this GetDictionarySubAttrsWordsResponse.
+        :rtype: List[TitleDic]
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: List[TitleDic]):
+        """Sets the data of this GetDictionarySubAttrsWordsResponse.
+
+
+        :param data: The data of this GetDictionarySubAttrsWordsResponse.
+        :type data: List[TitleDic]
+        """
+
+        self._data = data
