# swagger_server/models/post_dictionary_sub_attrs_words_count_reset_response.py
@@ -9,18 +9,18 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class PostDictionaryProductsAttrsResponse(Model):
+class PostDictionarySubAttrsWordsCountResetResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, message: str=None, data: str=None):  # noqa: E501
-        """PostDictionaryProductsAttrsResponse - a model defined in Swagger
+        """PostDictionarySubAttrsWordsCountResetResponse - a model defined in Swagger
 
-        :param message: The message of this PostDictionaryProductsAttrsResponse.  # noqa: E501
+        :param message: The message of this PostDictionarySubAttrsWordsCountResetResponse.  # noqa: E501
         :type message: str
-        :param data: The data of this PostDictionaryProductsAttrsResponse.  # noqa: E501
+        :param data: The data of this PostDictionarySubAttrsWordsCountResetResponse.  # noqa: E501
         :type data: str
         """
         self.swagger_types = {
@@ -37,32 +37,32 @@ class PostDictionaryProductsAttrsResponse(Model):
         self._data = data
 
     @classmethod
-    def from_dict(cls, dikt) -> 'PostDictionaryProductsAttrsResponse':
+    def from_dict(cls, dikt) -> 'PostDictionarySubAttrsWordsCountResetResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The PostDictionaryProductsAttrsResponse of this PostDictionaryProductsAttrsResponse.  # noqa: E501
-        :rtype: PostDictionaryProductsAttrsResponse
+        :return: The PostDictionarySubAttrsWordsCountResetResponse of this PostDictionarySubAttrsWordsCountResetResponse.  # noqa: E501
+        :rtype: PostDictionarySubAttrsWordsCountResetResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def message(self) -> str:
-        """Gets the message of this PostDictionaryProductsAttrsResponse.
+        """Gets the message of this PostDictionarySubAttrsWordsCountResetResponse.
 
 
-        :return: The message of this PostDictionaryProductsAttrsResponse.
+        :return: The message of this PostDictionarySubAttrsWordsCountResetResponse.
         :rtype: str
         """
         return self._message
 
     @message.setter
     def message(self, message: str):
-        """Sets the message of this PostDictionaryProductsAttrsResponse.
+        """Sets the message of this PostDictionarySubAttrsWordsCountResetResponse.
 
 
-        :param message: The message of this PostDictionaryProductsAttrsResponse.
+        :param message: The message of this PostDictionarySubAttrsWordsCountResetResponse.
         :type message: str
         """
 
@@ -70,20 +70,20 @@ class PostDictionaryProductsAttrsResponse(Model):
 
     @property
     def data(self) -> str:
-        """Gets the data of this PostDictionaryProductsAttrsResponse.
+        """Gets the data of this PostDictionarySubAttrsWordsCountResetResponse.
 
 
-        :return: The data of this PostDictionaryProductsAttrsResponse.
+        :return: The data of this PostDictionarySubAttrsWordsCountResetResponse.
         :rtype: str
         """
         return self._data
 
     @data.setter
     def data(self, data: str):
-        """Sets the data of this PostDictionaryProductsAttrsResponse.
+        """Sets the data of this PostDictionarySubAttrsWordsCountResetResponse.
 
 
-        :param data: The data of this PostDictionaryProductsAttrsResponse.
+        :param data: The data of this PostDictionarySubAttrsWordsCountResetResponse.
         :type data: str
         """
 
